--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Foot and Ball Academy</title>
+  <title>Foot and Ball Academy | Youth Football Development</title>
+  <meta name="description" content="Join Foot and Ball Academy for expert youth football cdevelopment. Register now to book a trial!" />
+  <link rel="canonical" href="https://footandballacademy.com/index.html" />
 
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="Foot and Ball Academy" />
+  <meta property="og:description" content="Expert youth football development focsused on long-term player development at Foot and Ball Academy." />
+  <meta property="og:image" content="https://footandballacademy.com/img/og-image.jpg" />
+  <meta property="og:url" content="https://footandballacademy.com/index.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Foot and Ball Academy" />
+  <meta name="twitter:description" content="Expert youth football coaching and long-term player development at Foot and Ball Academy." />
+  <meta name="twitter:image" content="https://footandballacademy.com/img/twitter-card.jpg" />
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+
+  <!-- Structured Data JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SportsOrganization",
+    "name": "Foot and Ball Academy",
+    "url": "https://footandballacademy.com",
+    "logo": "https://footandballacademy.com/img/logo.png",
+    "sameAs": [
+      "https://www.facebook.com/footandball.academy",
+      "https://www.youtube.com/FootandBall_Academy"
+    ]
+  }
+  </script>
+  
 <link rel="stylesheet" href="css/bootstrap.min.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.17.12/dist/css/uikit.min.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
