--- a/index.html
+++ b/index.html
@@ -207,9 +207,11 @@
       <div class="col-12 col-md-6 col-lg-3 our-mission-wrapper">
         <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
           <h3>Our Mission</h3>
-          <p>We are an educational establishment focused on long-term individual player development.</p>
-          <p>Think of us like a “primary school” for football, i.e., six y/o to 12 y/o.</p>
-          <p>Due to time and staffing restrictions, we currently only offer elite level sessions targeting ambitious players hungry to improve.</p>
+          <p>Based in the Hawkesbury, NSW, we are a private coaching business focused on long-term individual player development.</p>
+          <p>TWe have two primary objectives:</p>
+          <p>First, we want building a unique in-person playing environment for the hungriest, keenest and most interest young players to develop i.e. from turning 7 years old through to teenagers.</p>
+          <p>Second, we want to conduct ‘out-reach’ efforts via our social media platforms to engage with parents on the topic of true player development and reorientate your expectations on your child’s playing experience.</p>
+          <p> Check out more at <it>Help! I'm New</it> in our navigation bar.</p>
           <a href="register.html" class="btn btn-info btn-register">Register Now</a>
         </div>
       </div>
@@ -231,8 +233,9 @@
       <div class="col-12 col-md-6 col-lg-3 meet-founder-wrapper">
         <div class="section-card text-center h-100 mb-4 mb-md-0">
           <h3>Meet Our Founder</h3>
-          <p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education from around the world.</p>
-          <p>He always ensures our philosophies, curriculums, and session designs have global citations.</p>
+          <p>Nick has dedicated building Foot and Ball Academy around the intertwining of the latest trends in football education from around the world, and the cavities of his own playing experience as a youth player in Australia.</p>
+          <p>Currently holding his AFC C Licence, he always ensures All academy curriculums and session designs have a global-sourced citation.</p>
+          <p>You can check out more about us in the navigation bar options “Coaching Philosophy,” and “Academy Phenomena.”</p>
           <a target="_blank" href="Staff.html">
             <img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle" style="max-width: 150px;" />
           </a>
