--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
         <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
           <h3>Our Mission</h3>
           <p>Based in the Hawkesbury, NSW, we are a private coaching business focused on long-term individual player development.</p>
-          <p>TWe have two primary objectives:</p>
-          <p>First, we want building a unique in-person playing environment for the hungriest, keenest and most interest young players to develop i.e. from turning 7 years old through to teenagers.</p>
-          <p>Second, we want to conduct ‘out-reach’ efforts via our social media platforms to engage with parents on the topic of true player development and reorientate your expectations on your child’s playing experience.</p>
-          <p> Check out more at <it>Help! I'm New</it> in our navigation bar.</p>
+          <p>We have two primary objectives:</p>
+          <p>First, we want building a unique in-person playing environment for the keenest young players to develop in i.e. from turning 7 years old through to teenagers.</p>
+          <p>Second, we want to conduct ‘out-reach’ efforts via social media to engage with <em>parents</em> on the 'hazzy' topic of youth player development.</p>
+          <p> Check out more at <a href="help.html">Help! I'm New</a> or register for a trial below</p>
           <a href="register.html" class="btn btn-info btn-register">Register Now</a>
         </div>
       </div>
@@ -233,9 +233,9 @@
       <div class="col-12 col-md-6 col-lg-3 meet-founder-wrapper">
         <div class="section-card text-center h-100 mb-4 mb-md-0">
           <h3>Meet Our Founder</h3>
-          <p>Nick has dedicated building Foot and Ball Academy around the intertwining of the latest trends in football education from around the world, and the cavities of his own playing experience as a youth player in Australia.</p>
-          <p>Currently holding his AFC C Licence, he always ensures All academy curriculums and session designs have a global-sourced citation.</p>
-          <p>You can check out more about us in the navigation bar options “Coaching Philosophy,” and “Academy Phenomena.”</p>
+          <p><a href="staff.html">Nick</a> has dedicated the pillars of Foot and Ball Academy to the intersection between the latest trends in youth development around the world and the cavities of his own playing experience as a youth player in Australia.</p>
+          <p>Currently holding his AFC C Licence, he always ensures all academy curriculums and session designs have a globally-sourced citation.</p>
+          <p>Check out more at <a href="OurPhilosophy.html">Coaching Philosophy</a> or <a href="academy.html">Academy Phenomena.</a></p>
           <a target="_blank" href="Staff.html">
             <img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle" style="max-width: 150px;" />
           </a>
