--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <p>We have two primary objectives:</p>
           <p>First, we want building a unique in-person playing environment for the keenest young players to develop in i.e. from turning 7 years old through to teenagers.</p>
           <p>Second, we want to conduct ‘out-reach’ efforts via social media to engage with <em>parents</em> on the 'hazzy' topic of youth player development.</p>
-          <p> Check out more at <a href="help.html" target="_blank" rel="noopener noreferrer>Help! I'm New</a> or register for a trial below</p>
+          <p> Check out more at <a href="help.html" target="_blank" rel="noopener noreferrer">Help! I'm New</a> or register for a trial below</p>
           <a href="register.html" class="btn btn-info btn-register">Register Now</a>
         </div>
       </div>
@@ -233,9 +233,9 @@
       <div class="col-12 col-md-6 col-lg-3 meet-founder-wrapper">
         <div class="section-card text-center h-100 mb-4 mb-md-0">
           <h3>Meet Our Founder</h3>
-          <p><a href="staff.html">Nick</a> has dedicated the pillars of Foot and Ball Academy to the intersection between the latest trends in youth development around the world and the cavities of his own playing experience as a youth player in Australia.</p>
+          <p><a href="staff.html" target="_blank" rel="noopener noreferrer">Nick</a> has dedicated the pillars of Foot and Ball Academy to the intersection between the latest trends in youth development around the world and the cavities of his own playing experience as a youth player in Australia.</p>
           <p>Currently holding his AFC C Licence, he always ensures all academy curriculums and session designs have a globally-sourced citation.</p>
-          <p>Check out more at <a href="OurPhilosophy.html" target="_blank" rel="noopener noreferrer>Coaching Philosophy</a> or <a href="academy.html" target="_blank" rel="noopener noreferrer>Academy Phenomena.</a></p>
+          <p>Check out more at <a href="OurPhilosophy.html" target="_blank" rel="noopener noreferrer">Coaching Philosophy</a> or <a href="academy.html" target="_blank" rel="noopener noreferrer">Academy Phenomena.</a></p>
           <a target="_blank" href="Staff.html">
             <img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle" style="max-width: 150px;" />
           </a>
