--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <h3>Our Mission</h3>
           <p>Based in the Hawkesbury, NSW, we are a private coaching business focused on long-term individual player development.</p>
           <p>We have two primary objectives:</p>
-          <p>First, we want building a unique in-person playing environment for the keenest young players to develop in i.e. from turning 7 years old through to teenagers.</p>
+          <p>First, we want to build a unique in-person playing environment for the keenest young players to develop within i.e. from turning 7 years old through to teenagers.</p>
           <p>Second, we want to conduct ‘out-reach’ efforts via social media to engage with <em>parents</em> on the 'hazzy' topic of youth player development.</p>
           <p> Check out more at <a href="help.html" target="_blank" rel="noopener noreferrer">Help! I'm New</a> or register for a trial below</p>
           <a href="register.html" class="btn btn-info btn-register">Register Now</a>
