--- a/help.html
+++ b/help.html
@@ -10,6 +10,20 @@
   <link rel="stylesheet" href="css/uikit.min.css" />
   <link rel="stylesheet" href="css/fontawesome/css/all.css" />
   <title>Foot and Ball Academy</title>
+
+  <!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Foot and Ball Academy" />
+<meta property="og:description" content="Elite-like youth-focused football development." />
+<meta property="og:image" content="https://footandball.com.au/img/logo_wide.png" />
+<meta property="og:url" content="https://footandball.com.au/help" />
+<meta property="og:type" content="website" />
+
+<!-- Optional: Twitter card for better sharing on Twitter/X -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Foot and Ball Academy" />
+<meta name="twitter:description" content="Elite-like youth-focused football development." />
+<meta name="twitter:image" content="https://footandball.com.au/img/logo_wide.png" />
+
   <style>
     td {
       text-align: center;
