--- a/TOS.html
+++ b/TOS.html
@@ -62,7 +62,7 @@
 						correspondence.</p>
 
 					<h2>Payment</h2>
-					<p>Bookings for a free trial session must be made in advance of the session via suitable lines of Enquiry,
+					<p>Bookings for a trial session must be made in advance of the session via suitable lines of enquiry,
 						outlined under General.</p>
 
 					<p>You must provide specific personal information to book with us. Full details of the information we collect
