--- a/parents/messages.html
+++ b/parents/messages.html
@@ -6,8 +6,8 @@
   <title>Academy Updates - Foot and Ball Academy</title>
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../main.css">
-<link rel="stylesheet" href="style.css"> <!-- parents page tweaks -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="stylesheet" href="style.css">
+<script src="../js/jquery.min.js"></script>
 </head>
 <body>
 
@@ -22,18 +22,18 @@
   </div>
 </div>
 
-<!-- Footer -->
+<div id="nav-placeholder"></div>
 <div id="foot-placeholder"></div>
 
-<script>
-  $(function() {
-    $("#nav-placeholder").load("../nav.html");
-    $("#foot-placeholder").load("../footer.html");
-  });
-</script>
+<script src="../js/jquery.min.js"></script>
 <script src="auth.js"></script>
 <script>
-  checkLogin();
+  $(function(){
+    $("#nav-placeholder").load("../navbar.html");
+    $("#foot-placeholder").load("../footer.html");
+    checkLogin();  // run after navbar/footer loaded
+  });
 </script>
 </body>
 </html>
+
