--- a/parents/messages.html
+++ b/parents/messages.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Academy Updates - Foot and Ball Academy</title>
-<link rel="stylesheet" href="../css/bootstrap.min.css">
-<link rel="stylesheet" href="../main.css">
-<link rel="stylesheet" href="style.css">
-<script src="../js/jquery.min.js"></script>
+  
+  <!-- Local CSS -->
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../main.css">
+  <link rel="stylesheet" href="style.css"> <!-- parents page tweaks -->
+
+  <!-- jQuery local -->
+  <script src="../js/jquery.min.js"></script>
+  <script src="auth.js"></script>
 </head>
 <body>
 
-<!-- Navbar -->
-<div id="nav-placeholder"></div>
+  <!-- Navbar -->
+  <div id="nav-placeholder"></div>
 
-<!-- Main Content -->
-<div class="container my-5">
-  <h2 class="mb-4">Academy Updates</h2>
-  <div id="updates-container" class="p-3 bg-white shadow rounded">
-    <!-- Loaded from updates.html -->
+  <!-- Main Content -->
+  <div class="container my-5">
+    <h2 class="mb-4">Academy Updates</h2>
+    <div id="updates-container" class="p-3 bg-white shadow rounded">
+      <!-- Loaded from updates.html -->
+    </div>
   </div>
-</div>
 
-<div id="nav-placeholder"></div>
-<div id="foot-placeholder"></div>
+  <!-- Footer -->
+  <div id="foot-placeholder"></div>
 
-<script src="../js/jquery.min.js"></script>
-<script src="auth.js"></script>
-<script>
-  $(function(){
-    $("#nav-placeholder").load("../navbar.html");
-    $("#foot-placeholder").load("../footer.html");
-    checkLogin();  // run after navbar/footer loaded
-  });
-</script>
+  <!-- Load navbar/footer and run login check -->
+  <script>
+    $(function(){
+      $("#nav-placeholder").load("../navbar.html");
+      $("#foot-placeholder").load("../footer.html");
+      checkLogin();  // enforce password
+    });
+  </script>
+
 </body>
 </html>
-
