--- a/parents/login.html
+++ b/parents/login.html
@@ -7,7 +7,7 @@
 
   <!-- Local CSS -->
   <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../main.css">
+  <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="style.css"> <!-- parents page tweaks -->
 
   <!-- jQuery local -->
@@ -34,7 +34,7 @@
   <!-- Footer -->
   <div id="foot-placeholder"></div>
 
-  <!-- Load navbar/footer -->
+  <!-- Load navbar/footer and run login check -->
   <script>
     $(function(){
       $("#nav-placeholder").load("../navbar.html");
