--- a/parents/login.html
+++ b/parents/login.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css"> <!-- parents page tweaks -->
 
   <!-- jQuery local -->
-  <script src="../js/jquery.min.js"></script>
+  <script src="../js/jquery-3.6.4.min.js"></script>
   <script src="auth.js"></script>
 </head>
 <body>
