--- a/navbar.html
+++ b/navbar.html
@@ -2,8 +2,8 @@
   <div class="container">
 
     <a href="index.html" class="navbar-brand" style="font-family: 'Open Sans', sans-serif;">
-      <img src="./img/AssetsMan.png" class="img-fluid p-0" style="height: 40px;">
-      <img src="./img/AssetsTitle.png" class="img-fluid p-0" style="height: 40px;">
+      <img src="/img/AssetsMan.png" class="img-fluid p-0" style="height: 40px;">
+      <img src="/img/AssetsTitle.png" class="img-fluid p-0" style="height: 40px;">
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBar" aria-controls="navBar" aria-expanded="false" aria-label="Toggle navigation">
