--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
     <div class="row" style="margin-bottom:10px">
       <div class="col">
         <h6 class="display-5 mb-0 text-light">
-          <img src="./img/android-chrome-512x512.png" class="img-fluid p-0" style="height: 40px;"> FOOT AND BALL ACADEMY
+          <img src="/img/android-chrome-512x512.png" class="img-fluid p-0" style="height: 40px;"> FOOT AND BALL ACADEMY
         </h6>
       </div>
     </div>
