--- a/parents/login.html
+++ b/parents/login.html
@@ -13,8 +13,16 @@
   <!-- jQuery local -->
   <script src="../js/jquery-3.6.4.min.js"></script>
   <script src="auth.js"></script>
-</head>
-<body>
+  
+ <!-- Favicon -->
+ <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+ <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+
+ <!-- Android Chrome Icon -->
+ <link rel="icon" type="image/png" sizes="512x512" href="/img/android-chrome-512x512.png">
+
+ </head>
+ <body>
 
   <!-- Navbar -->
   <div id="nav-placeholder"></div>
