--- a/navbar.html
+++ b/navbar.html
@@ -13,27 +13,27 @@
     <div class="collapse navbar-collapse" id="navBar">
       <ul class="navbar-nav mr-auto" style="font-family: 'Open Sans', sans-serif;">
         <li class="nav-item mx-2">
-          <a class="nav-link" href="help.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Help! I'm New</a>
+          <a class="nav-link" href="/help.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Help! I'm New</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link" href="OurPhilosophy.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Coaching Philosophy</a>
+          <a class="nav-link" href="/OurPhilosophy.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Coaching Philosophy</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link" href="academy.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Academy Phenomena</a>
+          <a class="nav-link" href="/academy.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Academy Phenomena</a>
         </li>
         <li class="nav-item dropdown mx-2">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">About Us</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="Staff.html">Academy Staff</a>
-            <a class="dropdown-item" href="ContactUs.html">Contact Us</a>
-            <a class="dropdown-item" href="Privacy.html">Privacy</a>
-            <a class="dropdown-item" href="TOS.html">Terms and Conditions</a>
+            <a class="dropdown-item" href="/Staff.html">Academy Staff</a>
+            <a class="dropdown-item" href="/ContactUs.html">Contact Us</a>
+            <a class="dropdown-item" href="/Privacy.html">Privacy</a>
+            <a class="dropdown-item" href="/TOS.html">Terms and Conditions</a>
           </div>
         </li>
       </ul>
 
       <div class="d-flex align-items-center" style="white-space: nowrap;">
-        <a class="btn btn-warning mr-3" href="register.html" style="padding: 8px 20px; font-weight: bold;">Register Now</a>
+        <a class="btn btn-warning mr-3" href="/register.html" style="padding: 8px 20px; font-weight: bold;">Register Now</a>
         <a href="tel:+61452583279" class="text-white" style="font-weight: 600; font-size: 1rem; text-decoration: none;">📞 +61 452 583 279</a>
       </div>
     </div>
