--- a/parents/login.html
+++ b/parents/login.html
@@ -12,6 +12,11 @@
 
   <!-- jQuery local -->
   <script src="../js/jquery-3.6.4.min.js"></script>
+  
+  <!-- Bootstrap JS (local) -->
+  <script src="../js/bootstrap.min.js"></script>
+  
+  <!-- Your custom auth / other scripts -->
   <script src="auth.js"></script>
   
  <!-- Favicon -->
