--- a/parents/updates.html
+++ b/parents/updates.html
@@ -1,10 +1,36 @@
 <h4>Welcome to Term 3 Updates</h4>
-<p>Here are your weekly academy updates for this term.</p>
+<p>Hi all,</p>
+<p>Weclome to our new approach to Academy-wide communication. This page is intended for long-winded updates only.</p>
+
+<p> With summer fast approaching I thought this would be a good time to update and prepare everyone on changes coming to the Academy in Term 4 and beyond. 
+  Given the record number of enrolments, if even just 80% of you return next term that requires adjustments.</p>
 
 <ul>
-  <li>Week 1 – Training focus: ball mastery</li>
-  <li>Week 2 – Small-sided games</li>
-  <li>Week 3 – Passing & receiving</li>
+  <li>A small increase in session prices from $16 to $18 per player per session, effective Term 4. 
+    This reflects the inflationary events passed on to the business (wet weather hires, lightening, etc). It should, in theory, also facilitate structural upgrades as well (TBC). </li>
+  <li>No more ‘full time’ programs. </li>
+  <li>I will be adding three additional Academy sessions to the week (*including a Saturday mornings). Offering far more variety in times. </li>
+  <li>Players will be graded into Colour sessions now, not age groups i.e. Green (entry), blue (Junior), white (Intermediate), and Navy (experienced).</li>
+  <li>The grading will reflect very closely what we currently have. There should be no real surprises.</li>
+  <li>Parents will receive a text message indicating your child’s new colour and all relevant T4 information to help with the transition.</li>
+  <li>Timetable will be released here on the next update.</li>
+  <li>The Girl’s game night will be no longer, and girls will be integrated into the Academy with everyone else.</li>
+  <li>Term 4 re-registrations will be required, unfortunately. My long timers, please pay attention to that.</li>
+  <li>If your schedule has changed due to fresh summer commitments and you need new nights, unfortunately, I can’t directly help you. I am too big now. I hope with the larger array of sessions available everyone can find some spots.</li>
 </ul>
+
+<p>2026 updates</p>
+<p>This Academy-wide change is one I have pondered quite seriously for some time. Its considers the past nearly three years of operations. Given my size, and my specialised approach to coaching I have decided to follow the trend of several, 
+  larger Academys and focus only on players not apart or registered to another major Academy or NPL-JDL side. 
+  This leaves my ideal players primarily registered in the association playing environment. This will not start until T1, January 2026. </p>
+<p> My reasons aren’t as complex; it is simply training load. I, personally and professionally, think players doing elite-like training with me then somewhere else risk burnout and loss of interest more than their peers. 
+  I have tried it multiple times (in the past) and it never works out. There will be no hard feelings, judgements or concerns from my end, as always, well wishes for you and your child’s next challenge in their playing journey.</p>
+<p> Finally, to conclude, as intense and full-throttle the Academy is I want it always to remain a choice for parents and players. The more choices parents have, I believe the stronger a local community is in general. As we grow it will become more of a standalone choice. 
+  Players change their minds, and interests. If it’s not working out for whatever reasons I always like to take into the account, the track record of improvement we achieved as we part ways. I am all for remembering the positive work done and leaving on good terms.  
+  If you are here, it’s because you want an alternative playing experience for your child that focuses on their individual development. Gone are the days when the Academy was “extra training.” 
+  I’m not seeing any training like mine out there. Therefore, there’s no ‘extra’ about it.</p> 
+<p> Otherwise, I am seeing great improvements right across the Academy, which should be everyone’s celebratory focus. Your child growing and improving, not ‘winning’ and ‘losing.’ </p>
+<p> Any problems, issues or concerns about the above you know where to find or reach me! </p>
+<p> Otherwise, see you on the fields! Nick </p>
 
 <p class="text-muted">Last updated: 13 August 2025</p>
