--- a/parents/updates.html
+++ b/parents/updates.html
@@ -19,9 +19,9 @@
   <li>If your schedule has changed due to fresh summer commitments and you need new nights, unfortunately, I can’t directly help you. I am too big now. I hope with the larger array of sessions available everyone can find some spots.</li>
 </ul>
 
-<p>2026 updates</p>
+<h2>2026 updates</h2>
 <p>This Academy-wide change is one I have pondered quite seriously for some time. Its considers the past nearly three years of operations. Given my size, and my specialised approach to coaching I have decided to follow the trend of several, 
-  larger Academys and focus only on players <b>not</b> registered or enrolled in another Academy or NPL-JDL side. 
+  larger Academys and focus only on players <b>not</b> registered or enrolled in an NPL-JDL side or other Academy. 
   This leaves my ideal players primarily registered in the association/grassroots playing environment. This will not start until T1, January 2026.</p>
 <p> My reasons aren’t as complex; it is simply training load. I, personally and professionally, think players doing elite-like training with me then somewhere else risk burnout and loss of interest more than their peers. 
   I have tried it multiple times (in the past) and it never works out. There will be no hard feelings, judgements or concerns from my end, as always, well wishes for you and your child’s next challenge in their playing journey.</p>
