--- a/parents/updates.html
+++ b/parents/updates.html
@@ -1,6 +1,6 @@
-<h4>Welcome to Term 3 Updates</h4>
+<h3>Term 3,2025 Updates</h3>
 <p>Hi all,</p>
-<p>Weclome to our new approach to Academy-wide communication. This page is intended for long-winded updates only.</p>
+<p>Welcome to our new additional Academy-wide communication channel. This page is intended for more long-winded updates.</p>
 
 <p> With summer fast approaching I thought this would be a good time to update and prepare everyone on changes coming to the Academy in Term 4 and beyond. 
   Given the record number of enrolments, if even just 80% of you return next term that requires adjustments.</p>
@@ -19,7 +19,7 @@
   <li>If your schedule has changed due to fresh summer commitments and you need new nights, unfortunately, I can’t directly help you. I am too big now. I hope with the larger array of sessions available everyone can find some spots.</li>
 </ul>
 
-<h2>2026 updates</h2>
+<h4>2026 updates</h4>
 <p>This Academy-wide change is one I have pondered quite seriously for some time. Its considers the past nearly three years of operations. Given my size, and my specialised approach to coaching I have decided to follow the trend of several, 
   larger Academys and focus only on players <b>not</b> registered or enrolled in an NPL-JDL side or other Academy. 
   This leaves my ideal players primarily registered in the association/grassroots playing environment. This will not start until T1, January 2026.</p>
