--- a/parents/updates.html
+++ b/parents/updates.html
@@ -15,6 +15,7 @@
   <li>Parents will receive a text message indicating your child’s new colour and all relevant T4 information to help with the transition.</li>
   <li>Timetable will be released here on the next update.</li>
   <li>The Girl’s game night will be no longer, and girls will be integrated into the Academy with everyone else.</li>
+  <li>Specific 'skills' nights i.e. Mon and Fri, will be no longer. Instead, for Term 4 they will be incorporated into the rotating ciriculum of training concepts.</li>
   <li>Term 4 re-registrations will be required, unfortunately. My long timers, please pay attention to that.</li>
   <li>If your schedule has changed due to fresh summer commitments and you need new nights, unfortunately, I can’t directly help you. I am too big now. I hope with the larger array of sessions available everyone can find some spots.</li>
 </ul>
