--- a/help.html
+++ b/help.html
@@ -115,6 +115,10 @@
               <p>
                 This is not happening for your child. You recognise your child’s time could be invested other ways.
                 Time is already running out, especially if ambition to play at higher levels begins to express itself in the player.</p>
+              <p>
+                We interpret Foot and Ball Academy as an alternative playing + training environment for players currently registered in the association/grassroots system. 
+                We offer an internal infrastructure that caters to the players development in a far more focused way. 
+                We believe our unique sessions should be the priority mid-week footballing (only) priority in your player’s life (should all parties agree after a trial).</p>
             </div>
           </div>
         </div>
