--- a/help.html
+++ b/help.html
@@ -118,7 +118,7 @@
               <p>
                 We interpret Foot and Ball Academy as an alternative playing + training environment for players currently registered in the association/grassroots system. 
                 We offer an internal infrastructure that caters to the players development in a far more focused way. 
-                We believe our unique sessions should be the priority mid-week footballing (only) priority in your player’s life (should all parties agree after a trial).</p>
+                We believe our unique sessions should be the main weekday footballing (only) priority in your player’s life (should all parties agree after a trial).</p>
             </div>
           </div>
         </div>
