--- a/register.html
+++ b/register.html
@@ -95,13 +95,13 @@
 
         <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
-            <a href="https://forms.office.com/r/xmXftTU5w9" target="_blank">
-              <img src="img/term_winter_enrollment.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="Term 3 Program">
+            <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank">
+              <img src="img/term.enroll.website.banner.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="Term 4 Program">
             </a>
             <div class="card-body d-flex flex-column">
-              <h2 class="card-title">Term 3, 2025 (OPEN)</h2>
-              <p class="card-text">Starting July 21st, 2025, click below</p>
-              <a href="https://forms.office.com/r/xmXftTU5w9" target="_blank" class="btn btn-info mt-auto">
+              <h2 class="card-title">Term 4 (U13 - U16), 2025 (OPEN)</h2>
+              <p class="card-text">Starting October 13th, 2025, click below</p>
+              <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank" class="btn btn-info mt-auto">
                 Register Now
               </a>
             </div>
