--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
           <h3>Our Mission</h3>
           <p>Based in the Hawkesbury, NSW, we are a private coaching business focused on long-term individual player development.</p>
           <p>We have two primary objectives:</p>
-          <p>First, we want to build a unique in-person playing environment for the keenest young players to develop within i.e. from turning 7 years old through to teenagers.</p>
-          <p>Second, we want to conduct ‘out-reach’ efforts via social media to engage with <em>parents</em> on the 'hazzy' topic of youth player development.</p>
+          <p>First, we hold a unique in-person playing environment for the keenest young players to develop within. i.e. Truning 7 - 12 years old.</p>
+          <p>Second, we have recently expanded our sessions to accomodate Youth League players. i.e. U13 - U16. These 'extra' sessions are designed to help 'fill the training gap' left behind by the conclusion of the AYL.</p>
           <p> Check out more at <a href="help.html" target="_blank" rel="noopener noreferrer">Help! I'm New</a> or register for a trial below</p>
           <a href="register.html" class="btn btn-info btn-register">Register Now</a>
         </div>
