--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
       <div class="col-12 col-md-6 col-lg-3 our-mission-wrapper">
         <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
           <h3>Our Mission</h3>
-          <p>Based in the Hawkesbury, NSW, we are a private coaching business focused on long-term individual player development.</p>
-          <p>We have two primary objectives:</p>
-          <p>First, we hold a unique in-person playing environment for the keenest young players to develop within. i.e. Truning 7 - 12 years old.</p>
-          <p>Second, we have recently expanded our sessions to accomodate Youth League players. i.e. U13 - U16. These 'extra' sessions are designed to help 'fill the training gap' left behind by the conclusion of the AYL.</p>
+          <p>Based in the Hawkesbury, NSW, we are a private coaching business focused on concentrated player development.</p>
+          <p>Think of us like a 'stepping stone' in your child's football journey.</p>
+          <p>We hold a unique training environment for the keenest young players to develop within. i.e. 7 - 12 years old.</p>
+          <p>As of Term 4, 2025, we have exp[anded to accomodate Youth League players. i.e. U13 - U16. These 'extra' sessions are designed to help 'fill the training gap' left behind by the AYL.</p>
           <p> Check out more at <a href="help.html" target="_blank" rel="noopener noreferrer">Help! I'm New</a> or register for a trial below</p>
           <a href="register.html" class="btn btn-info btn-register">Register Now</a>
         </div>
