--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <p>Based in the Hawkesbury, NSW, we are a private coaching business focused on concentrated player development.</p>
           <p>Think of us like a 'stepping stone' in your child's football journey.</p>
           <p>We hold a unique training environment for the keenest young players to develop within. i.e. 7 - 12 years old.</p>
-          <p>As of Term 4, 2025, we have exp[anded to accomodate Youth League players. i.e. U13 - U16. These 'extra' sessions are designed to help 'fill the training gap' left behind by the AYL.</p>
+          <p>As of Term 4, 2025, we have expanded to accomodate Youth League players. i.e. U13 - U16. These <i>extra</i> sessions are designed to help <i>fill the training gap</i> left behind by the AYL.</p>
           <p> Check out more at <a href="help.html" target="_blank" rel="noopener noreferrer">Help! I'm New</a> or register for a trial below</p>
           <a href="register.html" class="btn btn-info btn-register">Register Now</a>
         </div>
