--- a/register.html
+++ b/register.html
@@ -96,7 +96,7 @@
         <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
             <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank">
-              <img src="img/term.enroll.website.banner.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="Term 4 Program">
+              <img src="img/term.enroll.website.banner.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="school term program">
             </a>
             <div class="card-body d-flex flex-column">
               <h2 class="card-title">Term 4 (U13 - U15), 2025 (OPEN)</h2>
@@ -110,14 +110,15 @@
 
         <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
-            <img src="img/stock6.jpg" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="1-on-1 Sessions">
+            <a href="https://forms.office.com/r/KXrA7sPVhR" target="_blank">
+            <img src="img/2026_eoi.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="2026 EOI">
             <div class="card-body d-flex flex-column">
-              <h2 class="card-title">1-on-1 Sessions</h2>
+              <h2 class="card-title">2026, Term 1, EOI</h2>
               <p class="card-text">
-                Consult one of our coaches first
-                <a href="PrivateSessions.html" class="link-secondary">Read more...</a>
+                For players turning 7, 8, or 9 in 2026. 
+                <a href="OurPhilosophy.html" class="link-secondary">Read more about us..</a>
               </p>
-              <a href="https://forms.office.com/r/v87P9vk9n0" target="_blank" class="btn btn-info mt-auto">
+              <a href="https://forms.office.com/r/KXrA7sPVhR" target="_blank" class="btn btn-info mt-auto">
                 Register Now
               </a>
             </div>
