--- a/register.html
+++ b/register.html
@@ -114,10 +114,7 @@
             <img src="img/2026_eoi.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="2026 EOI">
             <div class="card-body d-flex flex-column">
               <h2 class="card-title">2026, Term 1, EOI</h2>
-              <p class="card-text">
-                For players turning 7, 8, or 9 in 2026. 
-                <a href="OurPhilosophy.html" class="link-secondary">Read more about us..</a>
-              </p>
+              <p class="card-text"> For players turning 7, 8, or 9 in 2026.</p> 
               <a href="https://forms.office.com/r/KXrA7sPVhR" target="_blank" class="btn btn-info mt-auto">
                 Register Now
               </a>
