--- a/register.html
+++ b/register.html
@@ -76,23 +76,6 @@
     <div class="container py-5">
       <div class="row g-4">
 
-        <!--
-        <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
-          <div class="card text-center w-100">
-            <a href="https://forms.office.com/r/6fUJt0j4Kk" target="_blank">
-              <img src="img/hols.website.banner.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="Holiday Program">
-            </a>
-            <div class="card-body d-flex flex-column">
-              <h2 class="card-title">July 2025 Holidays (OPEN)</h2>
-              <p class="card-text">Register Now</p>
-              <a href="https://forms.office.com/r/6fUJt0j4Kk" target="_blank" class="btn btn-info mt-auto">
-                Register Now
-              </a>
-            </div>
-          </div>
-        </div>
-        -->
-
         <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
             <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank">
@@ -115,8 +98,23 @@
             </a>
             <div class="card-body d-flex flex-column">
               <h2 class="card-title">2026, Term 1, EOI</h2>
-              <p class="card-text"> For players turning 7, 8, or 9 in 2026.</p> 
+              <p class="card-text"> For players turning 7 or 8 in 2026 (ONLY).</p> 
               <a href="https://forms.office.com/r/KXrA7sPVhR" target="_blank" class="btn btn-info mt-auto">
+                Register Now
+              </a>
+            </div>
+          </div>
+        </div>
+    
+        <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
+          <div class="card text-center w-100">
+            <a href="https://forms.office.com/r/mKafETSKvT" target="_blank">
+              <img src="img/2026_eoi.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="Holiday Program">
+            </a>
+            <div class="card-body d-flex flex-column">
+              <h2 class="card-title">For players turning 9 through to 12 in 2026</h2>
+              <p class="card-text">Register Now</p>
+              <a href="https://forms.office.com/r/mKafETSKvT" target="_blank" class="btn btn-info mt-auto">
                 Register Now
               </a>
             </div>
