--- a/parents/updates.html
+++ b/parents/updates.html
@@ -1,37 +1,40 @@
-<h3>Term 3,2025 Updates</h3>
+<h3>Term 1,2026 Updates</h3>
 <p>Hi all,</p>
-<p>Welcome to our new additional Academy-wide communication channel. This page is intended for more long-winded updates.</p>
+<p>Welcome to our additional Academy-wide communication channel. This page is intended for more 'long-winded' updates.</p>
 
-<p> With summer fast approaching I thought this would be a good time to update and prepare everyone on changes coming to the Academy in Term 4 and beyond. 
-  Given the record number of enrolments, if even just 80% of you return next term that requires adjustments.</p>
+<p> Thanks again for expressing your interest in remaining with Foot and Ball Academy for the commencement of our 4th year in operation, 2026.</p>
+
+<p> As we continue to grow, the point of 'equilibrium' gets closer, whereby the constant term-to-term changes will begin to slow, 
+  and some consistency from our end will begin to (finally) emerge. In saying that (lol) here are the important changes starting in 2026:</p>
 
 <ul>
-  <li>A small increase in session prices from $16 to $18 per player per session, effective Term 4. 
-    This reflects the inflationary events passed on to the business (wet weather hires, lightening, etc). It should, in theory, also facilitate structural upgrades as well (TBC). </li>
-  <li>No more ‘full time’ programs. </li>
-  <li>I will be adding three additional Academy sessions to the week (*including a Saturday mornings). Offering far more variety in times. </li>
-  <li>Players will be graded into Colour sessions now, not age groups i.e. Green (entry), blue (Junior), white (Intermediate), and Navy (experienced).</li>
-  <li>The grading will reflect very closely what we currently have. There should be no real surprises.</li>
-  <li>Parents will receive a text message indicating your child’s new colour and all relevant T4 information to help with the transition.</li>
-  <li>Timetable will be released here on the next update.</li>
-  <li>The Girl’s game night will be no longer, and girls will be integrated into the Academy with everyone else.</li>
-  <li>Specific 'skills' nights i.e. Mon and Fri, will be no longer. Instead, for Term 4 they will be incorporated into the rotating ciriculum of training concepts.</li>
-  <li>Term 4 re-registrations will be required, unfortunately. My long timers, please pay attention to that.</li>
-  <li>If your schedule has changed due to fresh summer commitments and you need new nights, unfortunately, I can’t directly help you. I am too big now. I hope with the larger array of sessions available everyone can find some spots.</li>
+  <li>Foot and Ball Academy will be the focus for Association/Grassroots/ non-competitive players only. 
+    All players that achieve a position inside a full-time junior program i.e. JDL, or some kind of full time Academy / Academy League will no longer be able to attend from 2026.</li>
+  <li>We are introducing a new ‘third’ component and coaching service to the business. <strong>GameIQ</strong>, one night per week, will focus on ‘big field’ games i.e. 7 v 7 or 8 v 8, etc 
+    with <strong>multiple coaches involved</strong>, helping the players better understand 
+    the proper rules, basic tactics, and formations on the ‘big’ field, where they would otherwise be lost in the ‘wilderness’ on a Saturday. 
+    This will be available to all WHITE and NAVY players in Term 1, 2026 (pilot run).</li>
+  <li>This expands our Academy coaching pillars to three. ‘Dry’ training (no tackling, ball work only), contextualised training (small-sided games), 
+    and now GameIQ. We hope this affords you and your child the necessary framework to service all the major areas in player development until you’re ready to take the next ‘step.’</li>
+  <li><strong>Session colours</strong> were a big hit from my side. Much easier to manage and coach. 2026 will see the Academy adopt a more ‘fluid’ and ‘uneven’ approach to assigning your child a colour. 
+    This is inspired directly from the latest trends emerging out of actual official Academies e.g. CAT 1’s in the UK or Melbourne City FC, here in Oz. They term it ‘IDP’ or individual player development plan.</li>
+  <li>As there are now three services on offer from the Academy (eventually) a player ‘could (but rare)’ have three different colours assigned for that term, 
+    depending on their individual development journey (majority one or two). We hope this 'sensitivity' to player development yields better individual long-term results.</li>
 </ul>
 
-<h4>2026 updates</h4>
-<p>This Academy-wide change is one I have pondered quite seriously for some time. It considers the past nearly three years of operations. Given my size, and my specialised approach to coaching I have decided to follow the trend of several, 
-  larger Academies and focus only on players <b>not</b> registered or enrolled in an NPL-JDL side or other Academy. 
-  This leaves my ideal players primarily registered in the association/grassroots playing environment. This will not start until T1, January 2026.</p>
-<p> My reasons aren’t as complex; it is simply training load. I, personally and professionally, think players doing elite-like training with me then somewhere else risk burnout and loss of interest more than their peers. 
-  I have tried it multiple times (in the past) and it never works out. There will be no hard feelings, judgements or concerns from my end, as always, well wishes for you and your child’s next challenge in their playing journey.</p>
-<p> A reminder, as intense and full-throttle the Academy is I want it always to remain a choice for parents and players. The more choices parents have, I believe the stronger a local community is in general. As we grow it will become more of a standalone choice. 
-  Players change their minds, and interests. If it’s not working out for whatever reasons I always like us to reflect on the track record of improvement we achieved with your child as we part ways. I am all for remembering the positive work done and leaving on good terms. </p> 
-  <p>Finally, if you are enrolled with us, it’s because you've decided on a research-backed alternate playing experience for your child that focuses on their individual development. With the growth of our internal infrastructure, past are the days when the Academy was “extra training.” 
-  To be honest, I’m not seeing any training like mine out there. Therefore, there’s no ‘extra’ about it</p> 
-<p> Otherwise, I am seeing great improvements right across the Academy, which should be everyone’s celebratory focus. Your child growing and improving, not ‘winning’ and ‘losing.’ </p>
-<p> Any problems, issues or concerns about the above you know where to find or reach me! </p>
-<p> Otherwise, see you on the fields! Nick </p>
+<p>The <strong>next text message I send out to you all</strong> will contain the timetable, enrolment form and assigned colour(s) for your child(ren). A (made-up) example is included below:</p>
+<p> (Example START) </p>
+<p> <em>Welcome back to Term 1, 2026. Your assigned colours for this term (only) are:</em> </p>
+<p style="margin-left: 20px;"> <em>Training: White</em> </p>
+<p style="margin-left: 20px;"> <em>GameIQ: Navy</em> </p>
+<p style="margin-left: 20px;"> <em>Skills:White</em> </p>
+<p> <em>Timetable (please download to your phone): (link TBC)</em> </p>
+<p> <em>Enrolment Form: Link</em> </p>
+<p> <em>Any questions or concerns, let me know!</em> </p>
+<p> <em>Have a great Christmas break!</em> </p>
+<p> (Example END) </p>
+<p> That’s it from me! These are all the major updates, starting  first day of 2026. As always, any questions, let me know. I hope the text + timetable are clear enough to guide you all.</p>
+<p> Finally, your support, and desire to prioritise the Academy is the reason we can expand like this. So, thank you, again for all of it so far! </p>
+<p> Otherwise, see you on the fields! Coach Nick </p>
 
-<p class="text-muted">Last updated: 13 August 2025</p>
+<p class="text-muted">Last updated: 25th November 2025</p>
