--- a/parents/updates.html
+++ b/parents/updates.html
@@ -1,4 +1,4 @@
-<h3>Term 1,2026 Updates</h3>
+<h3>Term 1, 2026 Updates</h3>
 <p>Hi all,</p>
 <p>Welcome to our additional Academy-wide communication channel. This page is intended for more 'long-winded' updates.</p>
 
