--- a/index.html
+++ b/index.html
@@ -207,10 +207,13 @@
       <div class="col-12 col-md-6 col-lg-3 our-mission-wrapper">
         <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
           <h3>Our Mission</h3>
-          <p>Based in the Hawkesbury, NSW, we are a private coaching business focused on concentrated player development.</p>
-          <p>Think of us like a 'stepping stone' in your child's football journey.</p>
-          <p>We hold a unique training environment for the keenest young players to develop within. i.e. 7 - 12 years old.</p>
-          <p>As of Term 4, 2025, we have expanded to accomodate Youth League players. i.e. U13 - U16. These <i>extra</i> sessions are designed to help <i>fill the training gap</i> left behind by the AYL.</p>
+          <p>Based in the Hawkesbury, NSW, we are a local private coaching business focused on long-term player development.</p>
+         <p> Currently, we are split into ‘two streams’ </p>
+          <p><strong>The Academy</strong>: Catering players currently involved in Association/grassroots/non-competitive football 
+            i.e. (turning) 7 – 12 years old, who are discontent with the learning experience and wish to secure a consistent structured training environment with greater challenges and demands.</p>
+          <p><strong>Youth space</strong>: Catering to players playing Association Div 1/NPL competitive football i.e. 
+            (turning) 13 and up, we are motivated to offer a coaching service that occupies some of the ‘space’ left behind by the former AYL.</p>
+           <p>Think of us like a 'stepping stone' in your child's footballing journey.</p>
           <p> Check out more at <a href="help.html" target="_blank" rel="noopener noreferrer">Help! I'm New</a> or register for a trial below</p>
           <a href="register.html" class="btn btn-info btn-register">Register Now</a>
         </div>
