--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
           <h3>Our Mission</h3>
           <p>Based in the Hawkesbury, NSW, we are a local private coaching business focused on long-term player development.</p>
          <p> Currently, we are split into ‘two streams’ </p>
-          <p><strong>The Academy</strong>: Catering players currently involved in Association/grassroots/non-competitive football 
-            i.e. (turning) 7 – 12 years old, who are discontent with the learning experience and wish to secure a consistent structured training environment with greater challenges and demands.</p>
+          <p><strong>The Academy</strong>: Catering to players currently involved in Association/grassroots/non-competitive football 
+            i.e. (turning) 7 – 12 years old, who are eager for more and wish to secure a consistent, structured training environment, with greater challenges and demands.</p>
           <p><strong>Youth space</strong>: Catering to players playing Association Div 1/NPL competitive football i.e. 
             (turning) 13 and up, we are motivated to offer a coaching service that occupies some of the ‘space’ left behind by the former AYL.</p>
            <p>Think of us like a 'stepping stone' in your child's footballing journey.</p>
