--- a/register.html
+++ b/register.html
@@ -75,6 +75,21 @@
   <section id="about-info">
     <div class="container py-5">
       <div class="row g-4">
+        
+          <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
+          <div class="card text-center w-100">
+            <a href="https://forms.office.com/r/NMZStMJzyq" target="_blank">
+            <img src="img/2026_eoi.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="2026 EOI">
+            </a>
+            <div class="card-body d-flex flex-column">
+              <h2 class="card-title">2026, Term 1, OPEN registration</h2>
+              <p class="card-text"> For players born in 2018 or 2019 (ONLY).</p> 
+              <a href="https://forms.office.com/r/NMZStMJzyq" target="_blank" class="btn btn-info mt-auto">
+                Register Now
+              </a>
+            </div>
+          </div>
+        </div>
 
         <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
@@ -97,8 +112,8 @@
             <img src="img/2026_eoi.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="2026 EOI">
             </a>
             <div class="card-body d-flex flex-column">
-              <h2 class="card-title">2026, Term 1, EOI</h2>
-              <p class="card-text"> For players turning 7 or 8 in 2026 (ONLY).</p> 
+              <h2 class="card-title">2026, Term 1, Expression of Interest</h2>
+              <p class="card-text"> For players born 2017 - 2014 (ONLY).</p> 
               <a href="https://forms.office.com/r/KXrA7sPVhR" target="_blank" class="btn btn-info mt-auto">
                 Register Now
               </a>
