--- a/register.html
+++ b/register.html
@@ -108,13 +108,13 @@
 
         <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
-            <a href="https://forms.office.com/r/KXrA7sPVhR" target="_blank">
+            <a href="https://forms.office.com/r/mKafETSKvT" target="_blank">
             <img src="img/2026_eoi.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="2026 EOI">
             </a>
             <div class="card-body d-flex flex-column">
               <h2 class="card-title">2026, Term 1, Expression of Interest</h2>
               <p class="card-text"> For players born 2017 - 2014 (ONLY).</p> 
-              <a href="https://forms.office.com/r/KXrA7sPVhR" target="_blank" class="btn btn-info mt-auto">
+              <a href="https://forms.office.com/r/mKafETSKvT" target="_blank" class="btn btn-info mt-auto">
                 Register Now
               </a>
             </div>
