--- a/register.html
+++ b/register.html
@@ -79,7 +79,7 @@
           <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
             <a href="https://forms.office.com/r/NMZStMJzyq" target="_blank">
-            <img src="img/2026_eoi.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="2026 EOI">
+            <img src="img/academy_e.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="2026 EOI">
             </a>
             <div class="card-body d-flex flex-column">
               <h2 class="card-title">2026, Term 1, OPEN registration</h2>
@@ -94,7 +94,7 @@
         <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
             <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank">
-              <img src="img/term.enroll.website.banner.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="school term program">
+              <img src="img/youth_e.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="school term program">
             </a>
             <div class="card-body d-flex flex-column">
               <h2 class="card-title">Term 4 (U13 - U15), 2025 (OPEN)</h2>
@@ -109,7 +109,7 @@
         <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
             <a href="https://forms.office.com/r/mKafETSKvT" target="_blank">
-            <img src="img/2026_eoi.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="2026 EOI">
+            <img src="img/academy_eoi.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="2026 EOI">
             </a>
             <div class="card-body d-flex flex-column">
               <h2 class="card-title">2026, Term 1, Expression of Interest</h2>
