--- a/register.html
+++ b/register.html
@@ -97,8 +97,8 @@
               <img src="img/youth_e.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="school term program">
             </a>
             <div class="card-body d-flex flex-column">
-              <h2 class="card-title">Term 4 (U13 - U15), 2025 (OPEN)</h2>
-              <p class="card-text">Starting October 13th, 2025, click below</p>
+              <h2 class="card-title">2025, Term 1, OPEN registrationh2>
+              <p class="card-text">For players born in 2011 - 2013 (only)</p>
               <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank" class="btn btn-info mt-auto">
                 Register Now
               </a>
