--- a/register.html
+++ b/register.html
@@ -97,10 +97,10 @@
               <img src="img/youth_e.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="school term program">
             </a>
             <div class="card-body d-flex flex-column">
-              <h2 class="card-title">2025, Term 1, OPEN registrationh2>
+              <h2 class="card-title">2026, Term 1, COMING SOON</h2>
               <p class="card-text">For players born in 2011 - 2013 (only)</p>
               <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank" class="btn btn-info mt-auto">
-                Register Now
+                Coming soon.
               </a>
             </div>
           </div>
