--- a/register.html
+++ b/register.html
@@ -91,6 +91,21 @@
           </div>
         </div>
 
+          <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
+          <div class="card text-center w-100">
+            <a href="https://forms.office.com/r/mKafETSKvT" target="_blank">
+            <img src="img/academy_eoi.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="2026 EOI">
+            </a>
+            <div class="card-body d-flex flex-column">
+              <h2 class="card-title">2026, Term 1, Expression of Interest</h2>
+              <p class="card-text"> For players born 2017 - 2014 (ONLY).</p> 
+              <a href="https://forms.office.com/r/mKafETSKvT" target="_blank" class="btn btn-info mt-auto">
+                Register Now
+              </a>
+            </div>
+          </div>
+        </div>
+
         <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
             <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank">
@@ -106,21 +121,20 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
+          <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
-            <a href="https://forms.office.com/r/mKafETSKvT" target="_blank">
-            <img src="img/academy_eoi.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="2026 EOI">
+            <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank">
+              <img src="img/senior_e.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="school term program">
             </a>
             <div class="card-body d-flex flex-column">
-              <h2 class="card-title">2026, Term 1, Expression of Interest</h2>
-              <p class="card-text"> For players born 2017 - 2014 (ONLY).</p> 
-              <a href="https://forms.office.com/r/mKafETSKvT" target="_blank" class="btn btn-info mt-auto">
-                Register Now
+              <h2 class="card-title">2026, Pre-season COMING SOON</h2>
+              <p class="card-text">For players born in 2012 and before (only)</p>
+              <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank" class="btn btn-info mt-auto">
+                Coming soon.
               </a>
             </div>
           </div>
         </div>
-    
       </div>
     </div>
   </section>
