--- a/register.html
+++ b/register.html
@@ -123,13 +123,13 @@
 
           <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
-            <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank">
+            <a href="https://forms.office.com/r/JrQtkNkkGA" target="_blank">
               <img src="img/senior_e.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="school term program">
             </a>
             <div class="card-body d-flex flex-column">
               <h2 class="card-title">2026, Pre-season COMING SOON</h2>
-              <p class="card-text">For players born in 2012 and before (only)</p>
-              <a href="https://forms.office.com/r/i3GQ4uK21E" target="_blank" class="btn btn-info mt-auto">
+              <p class="card-text">For players born in 2010 and before (only)</p>
+              <a href="https://forms.office.com/r/JrQtkNkkGA" target="_blank" class="btn btn-info mt-auto">
                 Coming soon.
               </a>
             </div>
