--- a/index.html
+++ b/index.html
@@ -238,6 +238,8 @@
           <h3>Meet Our Founder</h3>
           <p><a href="staff.html" target="_blank" rel="noopener noreferrer">Nick</a> has dedicated the pillars of Foot and Ball Academy to the intersection between the latest trends in youth development around the world and the cavities of his own playing experience as a youth player in Australia.</p>
           <p>Currently holding his AFC C Licence, he always ensures all academy curriculums and session designs have a globally-sourced citation.</p>
+          <p> He emphasises the importance of player development over the current obsession with performance-based outcomes.</p>
+          <p> <em>“The Australian public has got it backwards. Your child’s championship trophy is in no way correlated with their individual growth or improvement as a player.”</em></p>
           <p>Check out more at <a href="OurPhilosophy.html" target="_blank" rel="noopener noreferrer">Coaching Philosophy</a> or <a href="academy.html" target="_blank" rel="noopener noreferrer">Academy Phenomena.</a></p>
           <a target="_blank" href="Staff.html">
             <img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle" style="max-width: 150px;" />
