--- a/Staff.html
+++ b/Staff.html
@@ -120,7 +120,7 @@
               <li><a href="./img/Barnett-Moore_WWCC_2022.pdf">Working With Children Check</a></li>
               <li><a href="./img/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</a></li>
               <li><a href="./img/Barnett-Moore_C-Licence_2025.JPG">AFC C Licence</a></li>
-              <li><a href="./img/Barnett-Moore_Barca_Coursework.pdf">Intro to Academy Coaching (FC Barcelona)</a></li>
+              <li><a href="./img/Barnett-Moore_Barca_Qualification.pdf">Barca Coach Academy: Introductory level (FC Barcelona)</a></li>
             </ul>
           </div>
         </div>
