--- a/Staff.html
+++ b/Staff.html
@@ -117,10 +117,27 @@
         <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#staffAccordion">
           <div class="card-body">
             <ul class="lead">
-              <li><a href="./img/Barnett-Moore_WWCC_2022.pdf">Working With Children Check</a></li>
-              <li><a href="./img/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</a></li>
-              <li><a href="./img/Barnett-Moore_C-Licence_2025.JPG">AFC C Licence</a></li>
-              <li><a href="./img/Barnett-Moore_Barca_Qualification.pdf">Barca Coach Academy: Introductory level (FC Barcelona)</a></li>
+              <li>
+                <a href="./img/Barnett-Moore_WWCC_2022.pdf" target="_blank" rel="noopener noreferrer">
+              Working With Children Check
+              </a>
+              </li>
+              <li>
+                <a href="./img/Barnett-Moore_PoliceCheck_2022.pdf" target="_blank" rel="noopener noreferrer">
+              NSW Police Check
+            </a>
+            </li>
+            <li>
+              <a href="./img/Barnett-Moore_C-Licence_2025.JPG" target="_blank" rel="noopener noreferrer">
+              AFC C Licence
+            </a>
+            </li>
+            <li>
+              <a href="./img/Barnett-Moore_Barca_Qualification.pdf" target="_blank" rel="noopener noreferrer">
+              Barca Coach Academy: Introductory level (FC Barcelona)
+            </a>
+            </li>
+
             </ul>
           </div>
         </div>
