--- a/register.html
+++ b/register.html
@@ -127,10 +127,10 @@
               <img src="img/senior_e.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="school term program">
             </a>
             <div class="card-body d-flex flex-column">
-              <h2 class="card-title">2026, Pre-season COMING SOON</h2>
+              <h2 class="card-title">2026, Pre-season, OPEN registration</h2>
               <p class="card-text">For players born in 2010 and before (only)</p>
               <a href="https://forms.office.com/r/JrQtkNkkGA" target="_blank" class="btn btn-info mt-auto">
-                Coming soon.
+                register Now.
               </a>
             </div>
           </div>
