--- a/register.html
+++ b/register.html
@@ -130,7 +130,7 @@
               <h2 class="card-title">2026, Pre-season, OPEN registration</h2>
               <p class="card-text">For players born in 2010 and before (only)</p>
               <a href="https://forms.office.com/r/JrQtkNkkGA" target="_blank" class="btn btn-info mt-auto">
-                register Now.
+                Register Now.
               </a>
             </div>
           </div>
