--- a/Staff.html
+++ b/Staff.html
@@ -76,7 +76,7 @@
               <li>U/13’s – U/15’s – Hawkesbury City FC.</li>
               <li>U/16’s – Mount Druitt Rangers (half season) | Granville Rage (now Western Rage).</li>
               <li>U/18’s – Granville Rage (half season) | Macarthur Rams (half season).</li>
-              <li>(2005) Macarthur Rams trip to England: Training at Chelsea & Liverpool academies. Friendlies with Staines, Rochdale, Reading.</li>
+              <li>(2005) Team 'tour' to England: Training at Chelsea & Liverpool academies. Friendlies with Staines, Rochdale, Reading.</li>
               <li>(2010) Six-week England visit, trained with semi-pro clubs in Southwest London.</li>
               <li>(2011) Gap year: Reserve match experience and trial with EFL League 2 club (unsuccessful).</li>
               <li>(2000 – 2005) Private coaching: Coverer-style curriculum (skills, turns, shooting, plyometrics).</li>
@@ -122,11 +122,6 @@
               Working With Children Check
               </a>
               </li>
-              <li>
-                <a href="./img/Barnett-Moore_PoliceCheck_2022.pdf" target="_blank" rel="noopener noreferrer">
-              NSW Police Check
-            </a>
-            </li>
             <li>
               <a href="./img/Barnett-Moore_C-Licence_2025.JPG" target="_blank" rel="noopener noreferrer">
               AFC C Licence
